--- a/app/templates/splash.html
+++ b/app/templates/splash.html
@@ -11,16 +11,34 @@
     <title>Price Tracker</title>
   </head>
   <body>
-				<div class="jumbotron" style="width: 100%">
-					<h1 class="display-4"><strong>Price Tracker</strong></h1>
-					<p class="lead">CIS 550: Final Project</p>
-					<hr class="my-4">
-					<p>A service for checking the value of goods and assets.</p>
-					<p class="lead">
-						<a class="btn btn-primary btn-lg" href="#" role="button">View Prices</a>
-					</p>
-				</div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+      <a class="navbar-brand" href="/">Price Tracker</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/timeline">Timeline</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cart">Cart</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
+    <div class="jumbotron bg-success" style="text-align: center;">
+      <h1 class="display-4 text-light">Welcome to <strong>Price Tracker.</strong></h1>
+      <p class="text-light">We used advanced algorithms and machine learning models to track and predict the prices of goods over a large time-scale.</p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="/dashboard" role="button">Check Prices</a>
+      </p>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
