--- a/app/templates/splash.html
+++ b/app/templates/splash.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-      <a class="navbar-brand" href="/">Price Tracker</a>
+      <a class="navbar-brand" href="/"><strong>Price Tracker</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,13 +32,19 @@
       </div>
     </nav>
 
-    <div class="jumbotron bg-success" style="text-align: center;">
-      <h1 class="display-4 text-light">Welcome to <strong>Price Tracker.</strong></h1>
-      <p class="text-light">We used advanced algorithms and machine learning models to track and predict the prices of goods over a large time-scale.</p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" href="/dashboard" role="button">Check Prices</a>
-      </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <br /><br />
+          
+          <h1><strong>Price Tracker</strong></h1>
+          <p class="text-muted">We used advanced algorithms and machine learning models to track and predict the prices of goods over a large time-scale.</p>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
     </div>
+    <br />
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
