Add stocks and commodities page

--- a/app/templates/stocks.html
+++ b/app/templates/stocks.html
@@ -20,10 +20,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/dashboard">Dashboard</a>
+            <a class="nav-link" href="/stocks">Stocks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/timeline">Timeline</a>
+            <a class="nav-link" href="/commodities">Commodities</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/cart">Cart</a>
@@ -38,8 +38,8 @@
         <div class="col-md-8">
           <br /><br />
           
-          <h1><strong>Dashboard</strong></h1>
-          <p class="text-muted">Discover the current market values of a variety of goods.</p>
+          <h1><strong>Stocks</strong></h1>
+          <p class="text-muted">Discover the current market values of a variety of Stocks.</p>
 
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Research database for..." aria-label="Text input with segmented dropdown button">
@@ -51,10 +51,8 @@
           <br />
           <small>Click on a result to view a timeline of its value:</small>
           <ul style="margin-top: 10px;" class="list-group">
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Avacados <span style="margin-left: 15px" class="badge badge-secondary">Good</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> S&P 500 <span style="margin-left: 15px" class="badge badge-secondary">Index</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Sliced Bread <span style="margin-left: 15px" class="badge badge-secondary">Good</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> GOOG <span style="margin-left: 15px" class="badge badge-secondary">Stock</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> S&P 500 <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> GOOG <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
           </ul>
         </div>
         <div class="col-md-2"></div>
