--- a/app/templates/commodities.html
+++ b/app/templates/commodities.html
@@ -38,18 +38,28 @@
         <div class="col-md-8">
           <br /><br />
           
-          <h1><strong>Cart</strong></h1>
-          <p class="text-muted">The goods you have chosen to save:</p>
+          <h1><strong>Commodities</strong></h1>
+          <p class="text-muted">Discover the current market values of a variety of Commodities.</p>
+
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Research database for..." aria-label="Text input with segmented dropdown button">
+            <div class="input-group-append">
+              <button type="button" class="btn btn-outline-info">Search</button>
+            </div>
+          </div>
+
+          <br />
+          <small>Click on a result to view a timeline of its value:</small>
           <ul style="margin-top: 10px;" class="list-group">
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Avacados <span style="margin-left: 15px" class="badge badge-secondary">Good</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> S&P 500 <span style="margin-left: 15px" class="badge badge-secondary">Index</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Sliced Bread <span style="margin-left: 15px" class="badge badge-secondary">Good</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> GOOG <span style="margin-left: 15px" class="badge badge-secondary">Stock</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Avacados <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Sliced Bread <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
           </ul>
         </div>
         <div class="col-md-2"></div>
       </div>
-    </div>    <!-- Optional JavaScript -->
+    </div>
+
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
