--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -57,10 +57,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/dashboard">Dashboard</a>
+            <a class="nav-link" href="/stocks">Stocks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/timeline">Timeline</a>
+            <a class="nav-link" href="/commodities">Commodities</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/cart">Cart</a>
