added stocks and commoodities to html files

--- a/app/templates/commodities.html
+++ b/app/templates/commodities.html
@@ -51,8 +51,13 @@
           <br />
           <small>Click on a result to view a timeline of its value:</small>
           <ul style="margin-top: 10px;" class="list-group">
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Avacados <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Sliced Bread <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Gold <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Oil <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> T206 Honus Wagner Baseball Card <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Ty Beanie Baby - Valentino the Bear <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> 1939 Alfa Romeo 8C 2900B Lungo Spider <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Super Mario 64 - Nintendo 64 <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Pokemon FireRed - Game Boy Advance <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
           </ul>
         </div>
         <div class="col-md-2"></div>
