--- a/app/templates/splash.html
+++ b/app/templates/splash.html
@@ -39,7 +39,7 @@
           <br /><br />
           
           <h1><strong>Price Tracker</strong></h1>
-          <p class="text-muted">We used advanced algorithms and machine learning models to track and predict the prices of goods over a large time-scale.</p>
+          <p class="text-muted">Welcome to the CIS 550 Price Tracker! This tool enables users to view the performance of various blue chip stocks over time, allowing them to observe what type of companies delivered high returns over the last several decades. In addition, they can view the value of various commodities and collectible items and observe how much they increase in value over time. Each user is given $100,000 in 2020 U.S. dollars to create the best mix of stocks and commodities to maximize their long-term return. </p>
         </div>
         <div class="col-md-2"></div>
       </div>
