--- a/app/templates/stocks.html
+++ b/app/templates/stocks.html
@@ -51,8 +51,24 @@
           <br />
           <small>Click on a result to view a timeline of its value:</small>
           <ul style="margin-top: 10px;" class="list-group">
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> S&P 500 <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> GOOG <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> S&P 500 (INX) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Nasdaq (IXIC) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Dow Jones (DJI) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Apple (APPL) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Amazon (AMZN) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> General Electric (GE) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Procter & Gamble Company (PG) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Sears Holding Group (SHLDQ) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> J.C. Penny (JCP) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Freddie Mac (FMCC) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Blackberry (BB) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Chesapeake Energy (CHKDG) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> American Axle and Manufacturing (AXL) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> BJ's Restaurants (BJRI) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> GW Pharmaceuticals (GWPH) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> IBM (IBM) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Carnival Cruises (CCL) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> ExxonMobil (XOM) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
           </ul>
         </div>
         <div class="col-md-2"></div>
