--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -41,10 +41,10 @@
           <h1><strong>Cart</strong></h1>
           <p class="text-muted">The goods you have chosen to save:</p>
           <ul style="margin-top: 10px;" class="list-group">
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Avacados <span style="margin-left: 15px" class="badge badge-secondary">Good</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> S&P 500 <span style="margin-left: 15px" class="badge badge-secondary">Index</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> Sliced Bread <span style="margin-left: 15px" class="badge badge-secondary">Good</span> </li></a>
-            <a style="margin-top: 3px" href="/timeline"><li class="list-group-item"> GOOG <span style="margin-left: 15px" class="badge badge-secondary">Stock</span> </li></a>
+            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> Avacados <span style="margin-left: 15px" class="badge badge-secondary">Good</span> </li></a>
+            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> S&P 500 <span style="margin-left: 15px" class="badge badge-secondary">Index</span> </li></a>
+            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> Sliced Bread <span style="margin-left: 15px" class="badge badge-secondary">Good</span> </li></a>
+            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> GOOG <span style="margin-left: 15px" class="badge badge-secondary">Stock</span> </li></a>
           </ul>
         </div>
         <div class="col-md-2"></div>
