--- a/app/templates/stocks.html
+++ b/app/templates/stocks.html
@@ -49,7 +49,7 @@
           </div>
 
           <br />
-          <small>Click on a result to view a timeline of its value:</small>
+          <small>Click on a result to view the listing: </small>
           <ul style="margin-top: 10px;" class="list-group">
               <form method="POST">
                   <label for="sp">S&P 500 Index:</label>
