added twitter feed and names for all items

--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -87,7 +87,7 @@
       <div class="row" style="margin-top: 3rem;">
         <div class="col-md-8">
 
-          <h1><strong>{{name}}</strong></h1>
+          <h1><strong>{{item_name}}</strong></h1>
           <div id="chartContainer" style="width: 100%;"></div>
         <div class="col-md-4"></div>
       </div>
@@ -114,5 +114,6 @@
         <a href="/timeline" class="btn btn-info btn-sm">GOOG</a> <a href="/timeline" class="btn btn-info btn-sm">Computers</a>
       </div>
     </div>
+    <a class="twitter-timeline" href={{link}}></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
