--- a/app/templates/stocks.html
+++ b/app/templates/stocks.html
@@ -75,7 +75,7 @@
                   <label for="sp">BlackBerry Ltd:</label>
                   <input type="submit" name="input" value="BB" ><br>
                   <label for="sp">Chesapeake Energy:</label>
-                  <input type="submit" name="input" value="CHKDG" ><br>
+                  <input type="submit" name="input" value="CHK" ><br>
                   <label for="sp">American Axle & Manufacturing:</label>
                   <input type="submit" name="input" value="AXL" ><br>
                   <label for="sp">BJ's Restaurants:</label>
@@ -100,7 +100,7 @@
             <a style="margin-top: 3px" href="/jcp"><li class="list-group-item"> J.C. Penny (JCP) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/fmcc"><li class="list-group-item"> Freddie Mac (FMCC) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/bb"><li class="list-group-item"> Blackberry (BB) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
-            <a style="margin-top: 3px" href="/chkdg"><li class="list-group-item"> Chesapeake Energy (CHKDG) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
+            <a style="margin-top: 3px" href="/chkdg"><li class="list-group-item"> Chesapeake Energy (CHK) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
             <a style="margin-top: 3px" href="/axl"><li class="list-group-item"> American Axle and Manufacturing (AXL) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span>
             <a style="margin-top: 3px" href="/bjri"><li class="list-group-item"> BJ's Restaurants (BJRI) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a> </li></a>
             <a style="margin-top: 3px" href="/gwph"><li class="list-group-item"> GW Pharmaceuticals (GWPH) <span style="margin-left: 15px" class="badge badge-secondary">Stocks</span> </li></a>
