Refactor commodities to use GET instead of POST

--- a/app/templates/commodities.html
+++ b/app/templates/commodities.html
@@ -51,29 +51,13 @@
           <br />
           <small>Click on a result to view a timeline of its value:</small>
           <ul style="margin-top: 10px;" class="list-group">
-            <form method="POST">
-                <label for="sp">Gold:</label>
-                <input type="submit" id = 'sp' name="input" value="GOLD" ><br>
-                <label for="sp">Oil:</label>
-                <input type="submit" name="input" value="OIL" ><br>
-                <label for="sp">T206 Honus Wagner:</label>
-                <input type="submit" name="input" value="WAGNER"><br>
-                <label for="sp">Ty Beanie Baby - Valentino the Bear:</label>
-                <input type="submit" name="input" value="VALENTINO"><br>
-                <label for="sp">1939 Alfa Romeo 8C 2900B Lungo Spider:</label>
-                <input type="submit" name="input" value="ROMEO"><br>
-                <label for="sp">Super Mario 64 - Nintendo 64:</label>
-                <input type="submit" name="input" value="MARIO"><br>
-                <label for="sp">Pokemon FireRed - Game Boy Advance:</label>
-                <input type="submit" name="input" value="POKEMON"><br>
-            </form>
-            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> Gold <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> Oil <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> T206 Honus Wagner Baseball Card <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> Ty Beanie Baby - Valentino the Bear <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> 1939 Alfa Romeo 8C 2900B Lungo Spider <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> Super Mario 64 - Nintendo 64 <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item"><li class="list-group-item"> Pokemon FireRed - Game Boy Advance <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=GOLD"><li class="list-group-item"> Gold <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=OIL"><li class="list-group-item"> Oil <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=WAGNER"><li class="list-group-item"> T206 Honus Wagner Baseball Card <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=VALENTINO"><li class="list-group-item"> Ty Beanie Baby - Valentino the Bear <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=ROMEO"><li class="list-group-item"> 1939 Alfa Romeo 8C 2900B Lungo Spider <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=MARIO"><li class="list-group-item"> Super Mario 64 - Nintendo 64 <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
+            <a style="margin-top: 3px" href="/item?kind=commodities&name=POKEMON"><li class="list-group-item"> Pokemon FireRed - Game Boy Advance <span style="margin-left: 15px" class="badge badge-secondary">Commodities</span> </li></a>
           </ul>
         </div>
         <div class="col-md-2"></div>
